--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1394,6 +1394,9 @@
     <ClCompile Include="UVa\10000\10074.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11614.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
