--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1397,6 +1397,9 @@
     <ClCompile Include="UVa\11600\11614.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11600\11608.cpp">
+      <Filter>UVa\11600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
