--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1400,6 +1400,9 @@
     <ClCompile Include="UVa\11600\11608.cpp">
       <Filter>UVa\11600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10229.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
