--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1409,6 +1409,9 @@
     <ClCompile Include="UVa\10600\10656.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11151.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
