--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1415,6 +1415,9 @@
     <ClCompile Include="UVa\11100\11121.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11173.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
