--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1421,6 +1421,9 @@
     <ClCompile Include="UVa\11100\11111.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11110.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
