--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1433,6 +1433,9 @@
     <ClCompile Include="UVa\11100\11130.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11181.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
