--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1436,6 +1436,9 @@
     <ClCompile Include="UVa\11100\11181.cpp">
       <Filter>UVa\11100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11161.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1674,6 +1677,9 @@
       <Filter>UVa\10100</Filter>
     </None>
     <None Include="UVa\11100\11115.py">
+      <Filter>UVa\11100</Filter>
+    </None>
+    <None Include="UVa\11100\11161.py">
       <Filter>UVa\11100</Filter>
     </None>
   </ItemGroup>
