--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1442,6 +1442,9 @@
     <ClCompile Include="UVa\13100\13107.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13140.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
