--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1445,6 +1445,9 @@
     <ClCompile Include="UVa\13100\13140.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13000\13026.cpp">
+      <Filter>UVa\13000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
