--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1460,6 +1460,12 @@
     <ClCompile Include="UVa\12300\12342.cpp">
       <Filter>UVa\12300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12200\12243.cpp">
+      <Filter>UVa\12200</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\11000\11059.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
