--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1466,6 +1466,9 @@
     <ClCompile Include="UVa\11000\11059.cpp">
       <Filter>UVa\11000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12200\12210.cpp">
+      <Filter>UVa\12200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
