--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1475,6 +1475,9 @@
     <ClCompile Include="UVa\12200\12239.cpp">
       <Filter>UVa\12200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12600\12626.cpp">
+      <Filter>UVa\12600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
