--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1484,6 +1484,9 @@
     <ClCompile Include="UVa\12600\12611.cpp">
       <Filter>UVa\12600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12600\12696.cpp">
+      <Filter>UVa\12600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
