--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1490,6 +1490,9 @@
     <ClCompile Include="UVa\12600\12650.cpp">
       <Filter>UVa\12600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12600\12614.cpp">
+      <Filter>UVa\12600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
