--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1496,6 +1496,9 @@
     <ClCompile Include="UVa\12600\12692.cpp">
       <Filter>UVa\12600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12500\12527.cpp">
+      <Filter>UVa\12500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
