--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1505,6 +1505,9 @@
     <ClCompile Include="UVa\12500\12592.cpp">
       <Filter>UVa\12500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12500\12541.cpp">
+      <Filter>UVa\12500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
