--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1508,6 +1508,9 @@
     <ClCompile Include="UVa\12500\12541.cpp">
       <Filter>UVa\12500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12400\12405.cpp">
+      <Filter>UVa\12400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
