--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1511,6 +1511,9 @@
     <ClCompile Include="UVa\12400\12405.cpp">
       <Filter>UVa\12400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12400\12455.cpp">
+      <Filter>UVa\12400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
