--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1520,6 +1520,9 @@
     <ClCompile Include="UVa\12400\12463.cpp">
       <Filter>UVa\12400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12146.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
