--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1523,6 +1523,9 @@
     <ClCompile Include="UVa\12100\12146.cpp">
       <Filter>UVa\12100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12000\12004.cpp">
+      <Filter>UVa\12000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
