--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1529,6 +1529,9 @@
     <ClCompile Include="UVa\12000\12032.cpp">
       <Filter>UVa\12000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12100\12157.cpp">
+      <Filter>UVa\12100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
