--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1535,6 +1535,9 @@
     <ClCompile Include="UVa\12000\12049.cpp">
       <Filter>UVa\12000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11100\11152.cpp">
+      <Filter>UVa\11100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1586,9 +1589,6 @@
       <Filter>Library\old</Filter>
     </ClInclude>
     <ClInclude Include="Library\old\topo_sort.h">
-      <Filter>Library\old</Filter>
-    </ClInclude>
-    <ClInclude Include="Library\old\triangle.h">
       <Filter>Library\old</Filter>
     </ClInclude>
     <ClInclude Include="Library\old\bases.h">
