--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1544,6 +1544,9 @@
     <ClCompile Include="UVa\10100\10142.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10130.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
