--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1550,6 +1550,9 @@
     <ClCompile Include="UVa\10900\10935.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\120.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
