--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1553,6 +1553,9 @@
     <ClCompile Include="UVa\100\120.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10219.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
