--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1562,6 +1562,9 @@
     <ClCompile Include="UVa\200\202.cpp">
       <Filter>UVa\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\156.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
