--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1568,6 +1568,9 @@
     <ClCompile Include="UVa\10100\10137.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10550.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
