--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1571,6 +1571,9 @@
     <ClCompile Include="UVa\10500\10550.cpp">
       <Filter>UVa\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10221.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
