--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1574,6 +1574,9 @@
     <ClCompile Include="UVa\10200\10221.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10948.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
