--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1580,6 +1580,9 @@
     <ClCompile Include="UVa\11400\11428.cpp">
       <Filter>UVa\11400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10963.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
