--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1583,6 +1583,9 @@
     <ClCompile Include="UVa\10900\10963.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\700\755.cpp">
+      <Filter>UVa\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
