--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1595,6 +1595,9 @@
     <ClCompile Include="UVa\10700\10784.cpp">
       <Filter>UVa\10700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11586.cpp">
+      <Filter>UVa\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
