--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1598,6 +1598,9 @@
     <ClCompile Include="UVa\11500\11586.cpp">
       <Filter>UVa\11500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10036.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
