--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1610,6 +1610,9 @@
     <ClCompile Include="UVa\10800\10879.cpp">
       <Filter>UVa\10800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\679.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
