--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1619,6 +1619,9 @@
     <ClCompile Include="UVa\1700\1726.cpp">
       <Filter>UVa\1700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1700\1729.cpp">
+      <Filter>UVa\1700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
