--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1628,6 +1628,9 @@
     <ClCompile Include="UVa\10100\10179.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13141.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
