ac. Fixed fastFactor() for overflow.

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1634,6 +1634,9 @@
     <ClCompile Include="UVa\13100\13180.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13194.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
