--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1640,6 +1640,9 @@
     <ClCompile Include="UVa\13100\13132.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10141.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
