--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1646,6 +1646,9 @@
     <ClCompile Include="Euler\1\2.cpp">
       <Filter>Euler\1</Filter>
     </ClCompile>
+    <ClCompile Include="Euler\1\7.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
