--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1655,6 +1655,9 @@
     <ClCompile Include="Euler\1\30.cpp">
       <Filter>Euler\1</Filter>
     </ClCompile>
+    <ClCompile Include="Euler\1\31.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
